# kernels

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: gemm.cu  main.cu  scan.cu  scan_kernel.cu  vecadd.cu
